@@ -1,3 +1,8 @@
+2012-07-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* mingw32.h (win32_popen): Static inline wrapper for _popen()
+	to use always binary mode.
+
 2012-07-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* win32lib.c: rewrite kpathsea_win32_popen to use always binary
